<?xml version="1.0" encoding="utf-8"?>
<MotionScene 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:motion="http://schemas.android.com/apk/res-auto">
    <Transition
        motion:constraintSetEnd="@+id/hideAll"
        motion:constraintSetStart="@id/firstItemLarge"
        motion:duration="1000">
        <OnClick
            motion:targetId="@+id/button"
            motion:clickAction="toggle"/>
    </Transition>
<!--    <Transition-->
<!--        motion:constraintSetEnd="@+id/secondItemLarge"-->
<!--        motion:constraintSetStart="@id/firstItemLarge"-->
<!--        motion:duration="1000">-->
<!--       <KeyFrameSet>-->
<!--           <KeyAttribute-->
<!--               motion:motionTarget="@+id/textView2"-->
<!--               motion:framePosition="50"-->
<!--               android:translationY="250dp"-->
<!--               motion:transitionEasing="accelerate"-->
<!--               android:rotationY="180"-->
<!--               motion:curveFit="spline" />-->
<!--           <KeyCycle-->
<!--               motion:motionTarget="@+id/imageView"-->
<!--               motion:wavePeriod="1"-->
<!--               motion:waveShape="sawtooth"-->
<!--               motion:transitionPathRotate="45"-->
<!--               motion:waveOffset="90" />-->
<!--       </KeyFrameSet>-->
<!--        <OnClick-->
<!--            motion:targetId="@+id/imageView2"-->
<!--            motion:clickAction="transitionToEnd"/>-->
<!--    </Transition>-->
    <Transition
        motion:constraintSetEnd="@+id/secondItemLarge"
        motion:constraintSetStart="@id/firstItemLarge"
        motion:duration="1000">
        <KeyFrameSet>
            <KeyAttribute
                motion:motionTarget="@+id/textView2"
                motion:framePosition="50"
                android:translationY="250dp"
                motion:transitionEasing="accelerate"
                android:rotationY="180"
                motion:curveFit="spline" />
        </KeyFrameSet>
        <OnClick
            motion:targetId="@+id/imageView2"
            motion:clickAction="transitionToEnd"/>
    </Transition>
    <Transition
        motion:constraintSetEnd="@+id/thirdItemLarge"
        motion:constraintSetStart="@id/firstItemLarge"
        motion:duration="1000">
        <KeyFrameSet>
            <KeyAttribute
               motion:motionTarget="@+id/textView2"
               motion:framePosition="50"
               android:translationY="250dp"
               motion:transitionEasing="accelerate"
               android:rotationY="180"
               motion:curveFit="spline" />
       </KeyFrameSet>
        <OnClick
            motion:targetId="@+id/imageView3"
            motion:clickAction="transitionToEnd"/>
    </Transition>
    <Transition
        motion:constraintSetEnd="@+id/thirdItemLarge"
        motion:constraintSetStart="@id/secondItemLarge"
        motion:duration="1000">
        <KeyFrameSet>
            <KeyAttribute
               motion:motionTarget="@+id/textView2"
               motion:framePosition="50"
               android:translationY="250dp"
               motion:transitionEasing="accelerate"
               android:rotationY="180"
               motion:curveFit="spline" />
       </KeyFrameSet>
        <OnClick
            motion:clickAction="transitionToEnd"
            motion:targetId="@+id/imageView3"/>
    </Transition>
    <Transition
        motion:constraintSetEnd="@+id/firstItemLarge"
        motion:constraintSetStart="@id/secondItemLarge"
        motion:duration="1000">
        <KeyFrameSet>
            <KeyAttribute
               motion:motionTarget="@+id/textView2"
               motion:framePosition="50"
               android:translationY="250dp"
               motion:transitionEasing="accelerate"
               android:rotationY="180"
               motion:curveFit="spline" />
       </KeyFrameSet>
        <OnClick
            motion:clickAction="transitionToEnd"
            motion:targetId="@+id/imageView"/>
    </Transition>
    <Transition
        motion:constraintSetEnd="@+id/firstItemLarge"
        motion:constraintSetStart="@id/thirdItemLarge"
        motion:duration="1000">
        <KeyFrameSet>
            <KeyAttribute
               motion:motionTarget="@+id/textView2"
               motion:framePosition="50"
               android:translationY="250dp"
               motion:transitionEasing="accelerate"
               android:rotationY="180"
               motion:curveFit="spline" />
       </KeyFrameSet>
        <OnClick
            motion:clickAction="transitionToEnd"
            motion:targetId="@+id/imageView"/>
    </Transition>
    <Transition
        motion:constraintSetEnd="@+id/secondItemLarge"
        motion:constraintSetStart="@id/thirdItemLarge"
        motion:duration="1000">
        <KeyFrameSet>
            <KeyAttribute
               motion:motionTarget="@+id/textView2"
               motion:framePosition="50"
               android:translationY="250dp"
               motion:transitionEasing="accelerate"
               android:rotationY="180"
               motion:curveFit="spline" />
       </KeyFrameSet>
        <OnClick
            motion:clickAction="transitionToEnd"
            motion:targetId="@+id/imageView2"/>
    </Transition>

    <ConstraintSet android:id="@+id/firstItemLarge">
    <Constraint
        android:id="@+id/imageView"
        android:layout_height="250dp"
        android:layout_width="0dp"
        motion:layout_constraintStart_toStartOf="parent"
        motion:layout_constraintTop_toTopOf="parent"
        motion:layout_constraintEnd_toStartOf="@+id/imageView2" />
    <Constraint
        android:id="@+id/imageView2"
        android:layout_height="250dp"
        android:layout_width="20dp"
        motion:layout_constraintTop_toTopOf="parent"
        motion:layout_constraintEnd_toStartOf="@+id/imageView3" />
    <Constraint
        android:id="@+id/imageView3"
        android:layout_height="250dp"
        android:layout_width="20dp"
        motion:layout_constraintTop_toTopOf="parent"
        motion:layout_constraintEnd_toEndOf="parent" />
    <Constraint
        android:layout_height="278dp"
        android:layout_marginTop="16dp"
        android:layout_width="0dp"
        motion:layout_constraintTop_toBottomOf="@+id/textView"
        android:id="@+id/textView2"
        motion:layout_constraintStart_toStartOf="parent"
        motion:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        motion:layout_constraintBottom_toTopOf="@+id/button">
        <CustomAttribute
            motion:attributeName="Text"
            motion:customStringValue="@string/subtitle"/>
        <CustomAttribute
            motion:attributeName="textColor"
            motion:customColorValue="#D50000" />
    </Constraint>
    <Constraint
        android:id="@+id/textView"
        android:layout_width="67dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        motion:layout_constraintBottom_toTopOf="@+id/textView2"
        motion:layout_constraintTop_toBottomOf="@+id/imageView"
        motion:layout_constraintHorizontal_bias="0.432"
        motion:layout_constraintStart_toStartOf="parent"
        motion:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">
        <CustomAttribute
            motion:attributeName="Text"
            motion:customStringValue="@string/title"/>
        <CustomAttribute
            motion:attributeName="textColor"
            motion:customColorValue="#D50000" />
    </Constraint>
</ConstraintSet>
    <ConstraintSet android:id="@+id/secondItemLarge">
        <Constraint
            android:id="@+id/imageView"
            android:layout_height="250dp"
            android:layout_width="20dp"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintTop_toTopOf="parent" />
        <Constraint
            android:id="@+id/imageView3"
            android:layout_height="250dp"
            android:layout_width="20dp"
            motion:layout_constraintTop_toTopOf="parent"
            motion:layout_constraintEnd_toEndOf="parent" />
        <Constraint
            android:id="@+id/imageView2"
            android:layout_height="250dp"
            android:layout_width="0dp"
            motion:layout_constraintTop_toTopOf="parent"
            motion:layout_constraintEnd_toStartOf="@+id/imageView3"
            motion:layout_constraintStart_toEndOf="@+id/imageView" />
        <Constraint
            android:layout_height="278dp"
            android:layout_marginTop="16dp"
            android:layout_width="0dp"
            motion:layout_constraintTop_toBottomOf="@+id/textView"
            android:id="@+id/textView2"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            motion:layout_constraintBottom_toTopOf="@+id/button">
            <CustomAttribute
                motion:attributeName="Text"
                motion:customStringValue="@string/subtitle2"/>
            <CustomAttribute
                motion:attributeName="textColor"
                motion:customColorValue="#D50000" />
        </Constraint>
        <Constraint
            android:id="@+id/textView"
            motion:layout_constraintEnd_toEndOf="parent"
            android:layout_width="67dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            motion:layout_constraintBottom_toTopOf="@+id/textView2"
            android:layout_marginEnd="16dp"
            motion:layout_constraintTop_toBottomOf="@+id/imageView2"
            android:layout_marginStart="16dp"
            motion:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp">
            <CustomAttribute
                motion:attributeName="Text"
                motion:customStringValue="@string/title2"/>
            <CustomAttribute
                motion:attributeName="textColor"
                motion:customColorValue="#D50000" />
        </Constraint>
    </ConstraintSet>
    <ConstraintSet android:id="@+id/thirdItemLarge">
        <Constraint
            android:id="@+id/imageView"
            android:layout_height="250dp"
            android:layout_width="20dp"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintTop_toTopOf="parent"
            motion:layout_constraintEnd_toStartOf="@+id/imageView2" />
        <Constraint
            android:id="@+id/imageView2"
            android:layout_height="250dp"
            android:layout_width="20dp"
            motion:layout_constraintTop_toTopOf="parent"
            motion:layout_constraintEnd_toStartOf="@+id/imageView3"
            motion:layout_constraintStart_toEndOf="@+id/imageView"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp" />
        <Constraint
            android:id="@+id/imageView3"
            android:layout_height="250dp"
            android:layout_width="0dp"
            motion:layout_constraintTop_toTopOf="parent"
            motion:layout_constraintEnd_toEndOf="parent"
            motion:layout_constraintStart_toEndOf="@+id/imageView2"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp" />
        <Constraint
            android:layout_height="278dp"
            android:layout_marginTop="16dp"
            android:layout_width="0dp"
            motion:layout_constraintTop_toBottomOf="@+id/textView"
            android:id="@+id/textView2"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            motion:layout_constraintBottom_toTopOf="@+id/button">
            <CustomAttribute
                motion:attributeName="Text"
                motion:customStringValue="@string/subtitle3"/>
            <CustomAttribute
                motion:attributeName="textColor"
                motion:customColorValue="#D50000" />
        </Constraint>
        <Constraint
            android:id="@+id/textView"
            motion:layout_constraintEnd_toEndOf="parent"
            android:layout_width="67dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            motion:layout_constraintBottom_toTopOf="@+id/textView2"
            android:layout_marginEnd="16dp"
            motion:layout_constraintTop_toBottomOf="@+id/imageView"
            android:layout_marginStart="16dp"
            motion:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp">
            <CustomAttribute
                motion:attributeName="Text"
                motion:customStringValue="@string/title3"/>
            <CustomAttribute
                motion:attributeName="textColor"
                motion:customColorValue="#D50000" />
        </Constraint>
    </ConstraintSet>
    <ConstraintSet android:id="@+id/hideAll">
        <Constraint
            android:id="@+id/imageView3"
            android:visibility="gone" />
        <Constraint
            android:id="@+id/imageView2"
            android:visibility="gone"
            />
        <Constraint
            android:id="@+id/button"
            android:layout_height="40dp"
            motion:layout_constraintStart_toStartOf="@+id/textView2"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            motion:layout_constraintBottom_toBottomOf="parent"
            motion:layout_constraintEnd_toEndOf="@+id/textView2"
            android:layout_width="wrap_content"
            motion:layout_constraintTop_toBottomOf="@+id/textView2">
            <CustomAttribute
                motion:attributeName="Text"
                motion:customStringValue="@string/goBack"/>
        </Constraint>
        <Constraint
            android:layout_height="250dp"
            android:layout_width="match_parent"
            android:id="@+id/imageView"
            motion:layout_editor_absoluteY="340dp"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintEnd_toEndOf="parent" />
        <Constraint
            android:layout_marginEnd="16dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            motion:layout_constraintBottom_toTopOf="@+id/button"
            motion:layout_constraintHorizontal_bias="0.0"
            motion:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            motion:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:id="@+id/textView2" />
    </ConstraintSet>
</MotionScene>